force-app/main/default/objects/Line_Item__c/Line_Item__c.object-meta.xml
<CustomObject>
    <label>PV-Order Parts</label>
    <nameField>
        <displayFormat>PV-LI-{00000000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PV-Order Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>