force-app/main/default/objects/Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <length>256</length>
    <type>Html</type>
</CustomField>