force-app/main/default/objects/Line_Item__c/fields/BTO_Master__c.field-meta.xml
<CustomField>
    <fullName>BTO_Master__c</fullName>
    <label>BTO Master #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>