force-app/main/default/objects/Line_Item__c/fields/DTV_Discount__c.field-meta.xml
<CustomField>
    <fullName>DTV_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DTV Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>