force-app/main/default/objects/Line_Item__c/fields/Fulfilled_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Total_Amount__c</fullName>
    <label>Fulfilled Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>