force-app/main/default/objects/Line_Item__c/fields/Fullfilled_Net_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fullfilled_Net_Total_Amount__c</fullName>
    <label>Fullfilled Net Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>