force-app/main/default/objects/Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item #</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>PV-Order Parts</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>