force-app/main/default/objects/Line_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>3800</length>
    <type>LongTextArea</type>
</CustomField>