force-app/main/default/objects/Line_Item__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <formula>IF( MSP__c &lt;  Price__c    ,(&apos;&lt;html&gt;&lt;body&gt;&lt;div style=&quot;color: red;&quot;&gt;&lt;b&gt;&apos; &amp; TEXT(Price__c) &amp; &apos;&lt;/b&gt;&lt;/div&gt;&lt;/body&gt;&lt;/html&gt;&apos;),
IF(MSP__c &gt;  Price__c,(&apos;&lt;html&gt;&lt;body&gt;&lt;div style=&quot;color: green;&quot;&gt;&lt;b&gt;&apos; &amp; TEXT(Price__c) &amp; &apos;&lt;/b&gt;&lt;/div&gt;&lt;/body&gt;&lt;/html&gt;&apos;),
&quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item</label>
    <type>Text</type>
</CustomField>