force-app/main/default/objects/Line_Item__c/fields/MSP_Price_Warning__c.field-meta.xml
<CustomField>
    <fullName>MSP_Price_Warning__c</fullName>
    <formula>IF( Price__c &lt; MSP__c,
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;, 20, 20)+&quot; Part is below MSP &quot;,
IF( Price__c &gt; MSP__c,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;yellow&quot;, 20, 20)+&quot; Part not below MSP &quot;,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;green&quot;, 20, 20)+&quot; Part is same as MSP &quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSP Price Warning</label>
    <type>Text</type>
</CustomField>