force-app/main/default/objects/Line_Item__c/fields/Net_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Line_Total__c</fullName>
    <label>Net Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>