force-app/main/default/objects/Line_Item__c/fields/Requested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Quantity__c</fullName>
    <label>Requested Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>