force-app/main/default/objects/Line_Item__c/validationRules/Discount_Field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(DTV_Discount__c ), ISBLANK(DTV_Discount__c ) )</errorConditionFormula>
    <errorMessage>Field Cannot be Empty</errorMessage>
</ValidationRule>