force-app/main/default/objects/Line_Item__c/validationRules/Fullfilled_Less_Than_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>Fullfilled_Less_Than_Requested</fullName>
    <active>true</active>
    <description>Fulfilled Quantity should not be greater than Requested Quantity and must not be less than Zero.</description>
    <errorConditionFormula>(Fulfilled_Quantity__c  &gt;  Requested_Quantity__c) ||  (Fulfilled_Quantity__c  &lt; 0)</errorConditionFormula>
    <errorDisplayField>Fulfilled_Quantity__c</errorDisplayField>
    <errorMessage>Fulfilled Quantity should not be greater than Requested Quantity and must not be less than Zero.</errorMessage>
</ValidationRule>