force-app/main/default/objects/Line_Item__c/validationRules/Prevent_OrderProduct_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_OrderProduct_Creation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( NOT(ISPICKVAL( Order__r.Stage__c , &quot;New&quot;)) , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Order Parts cannot be added once the order is submitted for approval.</errorMessage>
</ValidationRule>